Public/css/index.css
#content {
	display: grid;
	
	/* 2x7em columns at 20em page width, 2x9.5em at 25em */
	grid-template-columns: repeat(auto-fill, clamp(7em, calc(50vw - 3em), 9.5em));
	gap: 1em;
}

@media screen and (width >= 25rem) {
	#content {
		/* 2x9.5em columns at 25em page width, 3x9.5em at 36.5em, 5x12em at 69em */
		grid-template-columns: repeat(auto-fill, clamp(9.5em, calc(7.69vw + 6.69em), 12em));
	}
}

#search-info {
	border-radius: 1em;
	border: 1px solid #8888;
	margin-bottom: 1em;
	padding-left: 0.25em;
	padding-right: 0.25em;
	padding-top: 0.2em;
	padding-bottom: 0.2em;
	
	width: 100%;
	box-sizing: border-box;
	
	font-size: 110%;
	display: flex;
}
#search-info:has(> .error) {
	background-color: #e228;
}

#search-info > * {
	padding-left: 0.35em;
	padding-right: 0.25em;
	padding-top: 0.1em;
	padding-bottom: 0.1em;
}

#clear-search {
	margin-left: auto;
	border-radius: 2em;
	padding: 0.1em;
	
	width: 1.53em;
	height: 1.53em;
	font-size: 85%;
	align-content: center;
	text-align: center;
	
	color: inherit;
	text-decoration: none;
}
#clear-search:hover {
	background: #fff2;
}

.sheet-card {
	border: 0.5px solid #8888;
	border-radius: 1em;
	overflow: hidden;
	
	position: relative;
}

.sheet-card > a {
	text-decoration: none;
	color: inherit;
}

.sheet-card > .buttons {
	position: absolute;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	padding-right: 0.8em;
	padding-left: 0.8em;
	box-sizing: border-box;
	
	display: grid;
	grid-template-columns: repeat(auto-fit, 1.7em);
	gap: 0.2em;
	justify-content: end;
	
	width: 100%;
}

.sheet-card-button {
	padding: 0.2em;
	border-radius: 0.3em;
	background: #222;
	color: #aaa;
	
	width: 1.3em;
	height: 1.3em;
	text-align: center;
	align-content: center;
	
	cursor: pointer;
	text-decoration: none;
}
.sheet-card-button:hover {
	color: inherit;
}
.sheet-card-button:active {
	color: inherit;
	background: #555;
}

.sheet-card-button.destructive:hover {
	color: #f44;
}
.sheet-card-button.destructive:hover {
	color: #f44;
}

.sheet-card .content {
	margin: 0;
	padding: 0;
	height: clamp(5em, calc(40vw - 3em), 7em);
	display: flex;
	overflow: hidden;
}

@media screen and (width >= 25rem) {
	.sheet-card .content {
		/* 7em height at 25-36.5em page width, 9em at 69em */
		height: clamp(7em, calc(6.15vw + 4.75em), 9em);
	}
}

.sheet-card .content img {
	margin: auto;
	max-width: 100%;
	background: #fff;
}

.sheet-card .info {
	border-top: 0.5px solid #8888;
	
	padding-top: 0.3em;
	padding-left: 0.7em;
	padding-right: 0.6em;
	padding-bottom: 0.5em;
	
	background-color: #4443;
	
	font-size: 85%;
	opacity: 90%;
	height: 100%;
}

.sheet-card .info .title {
	font-weight: bolder;
	overflow-wrap: break-word;
}

.sheet-card .info .other-info {
	margin-top: 0.3em;
	font-size: 80%;
	opacity: 80%;
}

.sheet-card .info .composer, .sheet-card .info .arranger {
	font-weight: bolder;
	overflow-wrap: break-word;
	opacity: 120%;
}

